Swap SUI provided Font Awesome for FA6 Pro via hosted kit
The hosted kit from Font Awesome provides optimized and auto-subsetted
version of the webfont downloads, greatly reducing the footprint of the
Font Awesome.

This follows site-community and drops the included FA5 using a few
hacks. It also drops all the SUI `.icon` class definitions, saving more
bandwidth. All of the icons in templates were replaced with a mix of
solid and duotone icons.

--- a/readthedocsext/theme/templates/account/login.html
+++ b/readthedocsext/theme/templates/account/login.html
@@ -41,13 +41,13 @@
             <div class="ui two column grid">
               <div class="column">
                 <a class="ui github fluid button" href="{% provider_login_url "github" process="login" scope=scope auth_params=auth_params %}">
-                  <i class="ui github icon"></i>
+                  <i class="fa-brands fa-github icon"></i>
                   {% trans "GitHub" %}
                 </a>
               </div>
               <div class="column">
                 <a class="ui bitbucket fluid button" href="{% provider_login_url "bitbucket_oauth2" process="login" scope=scope auth_params=auth_params %}">
-                  <i class="ui bitbucket icon"></i>
+                  <i class="fa-brands fa-bitbucket icon"></i>
                   {% trans "Bitbucket" %}
                 </a>
               </div>
