--- a/readthedocsext/theme/templates/includes/crud/list.html
+++ b/readthedocsext/theme/templates/includes/crud/list.html
@@ -241,7 +241,7 @@
                     {% block list_item_right_buttons %}
                       {% comment %}
                         <a class="ui icon button">
-                          <i class="refresh icon"></i>
+                          <i class="fa-solid fa-refresh icon"></i>
                         </a>
                       {% endcomment %}
                     {% endblock list_item_right_buttons %}
@@ -265,7 +265,7 @@
                         {% block list_item_meta %}
                           {% comment %}
                             <div class="item">
-                              <i class="code branch icon"></i>
+                              <i class="fa-solid fa-code-branch icon"></i>
                               <code>{{ build.commit|truncatechars:8 }}</code>
                             </div>
                           {% endcomment %}
