--- a/readthedocsext/theme/templates/includes/crud/remove_button.html
+++ b/readthedocsext/theme/templates/includes/crud/remove_button.html
@@ -53,7 +53,7 @@
 <a class="ui icon button"
    data-bind="click: $root.show_modal('remove-{{ id }}')"
    data-content="{{ action_text }}">
-  <i class="trash icon"></i>
+  <i class="fa-solid fa-trash icon"></i>
 </a>
 <div class="ui mini modal" data-modal-id="remove-{{ id }}">
   <div class="header">{{ action_text }}</div>
