--- a/readthedocsext/theme/templates/includes/filters/form.html
+++ b/readthedocsext/theme/templates/includes/filters/form.html
@@ -23,7 +23,7 @@
             {% if field.value %}<span class="ui floating tiny empty circular olive label"></span>{% endif %}
             {{ field.label }}
           </div>
-          <i class="dropdown icon"></i>
+          <i class="fa-solid fa-caret-down icon"></i>
 
           <div class="menu">
             {% for option in field.field.widget.choices %}
