--- a/readthedocsext/theme/templates/includes/popupcards/project.html
+++ b/readthedocsext/theme/templates/includes/popupcards/project.html
@@ -16,7 +16,7 @@
 {% block popupcard_extra_content %}
   <span>
     <a class="ui basic mini labeled icon button">
-      <i class="book icon"></i>
+      <i class="fa-duotone fa-book icon"></i>
       <code>
         /{{ project.language }}/{{ project.default_version }}/
       </code>
