--- a/readthedocsext/theme/templates/includes/utils/messages.html
+++ b/readthedocsext/theme/templates/includes/utils/messages.html
@@ -10,13 +10,13 @@
       {% if message.pk %}
         <div class="ui message {{ message.tags }}"
              data-bind="message: {dismiss_url: '{% url "message_mark_read" message.pk %}'}">
-          <i class="close icon"></i>
+          <i class="fa-duotone fa-circle-xmark close icon"></i>
           <span>{{ message }}</span>
         </div>
       {% else %}
         <div class="ui message {{ message.tags }}"
              data-bind="message: {}">
-          <i class="close icon"></i>
+          <i class="fa-duotone fa-circle-xmark close icon"></i>
           <span>{{ message }}</span>
         </div>
       {% endif %}
