--- a/readthedocsext/theme/templates/projects/domain_form.html
+++ b/readthedocsext/theme/templates/projects/domain_form.html
@@ -46,7 +46,7 @@
     <input class="ui primary button" type="submit" value="{{ button_text }}">
     {% if domain.domainssl %}
       <div class="ui basic left pointing label">
-        <i class="warning icon"></i>
+        <i class="fa-duotone fa-triangle-exclamation icon"></i>
         {% trans "Saving the domain will cause revalidation of the SSL certificate." %}
       </div>
     {% endif %}
