--- a/readthedocsext/theme/templates/projects/environmentvariable_form.html
+++ b/readthedocsext/theme/templates/projects/environmentvariable_form.html
@@ -9,7 +9,7 @@
 
 {% block project_edit_content %}
   <div class="ui icon message">
-    <i class="exclamation icon"></i>
+    <i class="fa-duotone fa-circle-exclamation icon"></i>
     <div class="content">
       {% blocktrans trimmed %}
         This environment variable will be available to all build
