--- a/readthedocsext/theme/templates/projects/integration_generic_webhook_detail.html
+++ b/readthedocsext/theme/templates/projects/integration_generic_webhook_detail.html
@@ -18,8 +18,8 @@
           </div>
           <div class="description">
             <code>{{ integration.token }}</code>
-            <span class="ui mini compact icon basic button" data-clipboard-text="{{ integration.token }}" data-content="{% trans "Copied!" %}">
-              <i class="copy outline icon"></i>
+            <span class="ui compact icon basic button" data-clipboard-text="{{ integration.token }}" data-content="{% trans "Copied!" %}">
+              <i class="fa-duotone fa-copy icon"></i>
             </span>
           </div>
         </div>
