--- a/readthedocsext/theme/templates/projects/partials/edit/notification_email_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/notification_email_list.html
@@ -18,7 +18,7 @@
 {% block create_button %}
 {% endblock %}
 
-{% block list_placeholder_icon_class %}envelope outline{% endblock %}
+{% block list_placeholder_icon_class %}fa-duotone fa-envelope-dot{% endblock %}
 {% block list_placeholder_header %}
   {% blocktrans trimmed %}
     No email notifications have been configured yet
