--- a/readthedocsext/theme/templates/projects/partials/edit/notification_webhook_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/notification_webhook_list.html
@@ -18,7 +18,7 @@
 {% block create_button %}
 {% endblock %}
 
-{% block list_placeholder_icon_class %}broadcast tower{% endblock %}
+{% block list_placeholder_icon_class %}fa-duotone fa-satellite-dish{% endblock %}
 {% block list_placeholder_header %}
   {% blocktrans trimmed %}
     No webhook notifications have been configured yet
