--- a/readthedocsext/theme/templates/projects/partials/edit/traffic_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/traffic_list.html
@@ -17,14 +17,14 @@
 {% block create_button %}
 {% endblock %}
 
-{% block list_placeholder_icon_class %}search{% endblock %}
+{% block list_placeholder_icon_class %}fa-duotone fa-chart-mixed{% endblock %}
 {% block list_placeholder_header %}
   {% blocktrans trimmed %}
     Traffic data is not available yet
   {% endblocktrans %}
   <div class="sub header">
     {% blocktrans trimmed %}
-      Traffic data will be accumulated as reader view your documentation.
+      Traffic data will be accumulated as readers view your documentation.
     {% endblocktrans %}
   </div>
 {% endblock list_placeholder_header %}
