--- a/readthedocsext/theme/templates/projects/redirect_list.html
+++ b/readthedocsext/theme/templates/projects/redirect_list.html
@@ -31,14 +31,14 @@
         <div class="ui list">
           <div class="item">
             <div class="ui small basic label">
-              <i class="directions icon"></i>
+              <i class="fa-duotone fa-sign-posts icon"></i>
               Redirect from
             </div>
             <code data-bind="text: redirect_from"></code>
           </div>
           <div class="item">
             <div class="ui small basic label">
-              <i class="directions icon"></i>
+              <i class="fa-duotone fa-sign-posts icon"></i>
               Redirect to
             </div>
             <code data-bind="text: redirect_to"></code>
