--- a/readthedocsext/theme/templates/projects/user_list.html
+++ b/readthedocsext/theme/templates/projects/user_list.html
@@ -16,7 +16,7 @@
   </h3>
 
   <div class="ui info message">
-    <i class="info icon"></i>
+    <i class="fa-duotone fa-circle-info icon"></i>
     {% blocktrans trimmed %}
       Adding a user as a maintainer will give the user admin access to this project.
     {% endblocktrans %}
