--- a/readthedocsext/theme/templates/semantic-ui/semantic-ui/field.html
+++ b/readthedocsext/theme/templates/semantic-ui/semantic-ui/field.html
@@ -14,7 +14,7 @@
       <label for="{{ field.id_for_label }}" class="ui {{ label_class }}"{% if field.help_text %} data-html="{{ field.help_text }}"{% endif %}>
         {{ field.label|safe }}
         {% if field.help_text %}
-          <i class="ui small circular grey help icon"></i>
+          <i class="ui small grey fa-duotone fa-circle-question icon"></i>
         {% endif %}
       </label>
     {% endif %}
@@ -41,7 +41,7 @@
           {{ field.label|safe }}
         </label>
         {% if field.help_text %}
-          <i class="ui small circular grey help icon" data-html="{{ field.help_text }}"></i>
+          <i class="ui small grey fa-duotone fa-circle-question icon" data-html="{{ field.help_text }}"></i>
         {% endif %}
         {% include 'semantic-ui/layout/field_errors_block.html' with direction="left" %}
       {% elif field|is_file %}
