--- a/readthedocsext/theme/templates/builds/includes/status_icon.html
+++ b/readthedocsext/theme/templates/builds/includes/status_icon.html
@@ -2,12 +2,12 @@
 
 {% if build.state == 'finished' %}
   {% if build.success %}
-    <i class="ui {% if size %}{{ size }} {% else %}small {% endif %}olive {% if circular %}inverted circular {% endif %}check icon"></i>
+    <i class="ui {% if size %}{{ size }} {% else %}small {% endif %}olive {% if circular %}inverted circular {% endif %}fa-solid fa-check icon"></i>
   {% else %}
-    <i class="ui {% if size %}{{ size }} {% else %}small {% endif %}red {% if circular %}inverted circular {% endif %}x icon"></i>
+    <i class="ui {% if size %}{{ size }} {% else %}small {% endif %}red {% if circular %}inverted circular {% endif %}fa-solid fa-xmark icon"></i>
   {% endif %}
 {% elif build.is_stale %}
-  <i class="ui {% if size %}{{ size }} {% else %}small {% endif %}orange {% if circular %}inverted circular {% endif %}exclamation icon" title="{% trans 'This build is still waiting to be built' %}"></i>
+  <i class="ui {% if size %}{{ size }} {% else %}small {% endif %}orange {% if circular %}inverted circular {% endif %}fa-solid fa-exclamation icon" title="{% trans 'This build is still waiting to be built' %}"></i>
 {% else %}
-  <i class="ui {% if size %}{{ size }} {% else %}small {% endif %}yellow {% if circular %}inverted circular {% endif %}half hourglass icon"></i>
+  <i class="ui {% if size %}{{ size }} {% else %}small {% endif %}yellow {% if circular %}inverted circular {% endif %}fa-solid fa-play icon"></i>
 {% endif %}
