--- a/readthedocsext/theme/templates/profiles/private/edit_profile.html
+++ b/readthedocsext/theme/templates/profiles/private/edit_profile.html
@@ -31,7 +31,7 @@
 
     {% trans "Delete account" as action_text %}
     <a class="ui button" data-bind="click: $root.show_modal('delete-account')">
-      <i class="trash icon"></i>
+      <i class="fa-duotone fa-trash icon"></i>
       {{ action_text }}
     </a>
     <div class="ui mini modal" data-modal-id="delete-account">
@@ -58,7 +58,7 @@
   <div class="ui card">
     <div class="image" data-tooltip="{% trans "Visit Gravatar to update your profile image" %}" data-position="bottom center">
       <a class="ui bottom right corner label">
-        <i class="edit icon"></i>
+        <i class="fa-duotone fa-edit icon"></i>
       </a>
       <img src="{% gravatar_url request.user.email 256 %}">
     </div>
