--- a/readthedocsext/theme/templates/projects/partials/edit/user_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/user_list.html
@@ -48,7 +48,7 @@
   <a class="ui{% if object == request.user %} disabled{% endif %} icon button"
      data-bind="click: $root.show_modal('user-{{ object.username }}')"
      data-content="{% trans "Remove maintainer" %}">
-    <i class="trash icon"></i>
+    <i class="fa-duotone fa-trash icon"></i>
   </a>
   <div class="ui mini modal" data-modal-id="user-{{ object.username }}">
     <div class="header">Remove user {{ object.username }}</div>
@@ -68,7 +68,7 @@
 {% block list_item_header %}
   <a class="ui basic label"
      href="{% url "profiles_profile_detail" user.username %}">
-    <i class="user outline icon"></i>
+    <i class="fa-duotone fa-user icon"></i>
     <code>{{ object.username }}</code>
   </a>
 {% endblock list_item_header %}
