--- a/readthedocsext/theme/templates/projects/settings_basics_form.html
+++ b/readthedocsext/theme/templates/projects/settings_basics_form.html
@@ -38,7 +38,7 @@
     </p>
 
     <a class="ui button" data-bind="click: $root.show_modal('project-delete')">
-      <i class="trash icon"></i>
+      <i class="fa-duotone fa-trash icon"></i>
       {% trans "Delete project" %}
     </a>
     <div class="ui mini modal" data-modal-id="project-delete">
