--- a/readthedocsext/theme/templates/socialaccount/connections.html
+++ b/readthedocsext/theme/templates/socialaccount/connections.html
@@ -10,7 +10,7 @@
   {% include "socialaccount/partials/social_account_list.html" with objects=form.accounts %}
 
   <div class="ui tiny modal" data-modal-id="socialaccount-connections">
-    <i class="close icon"></i>
+    <i class="fa-solid fa-close icon"></i>
     <div class="header">
       {% trans "Add a connection" %}
     </div>
