--- a/readthedocsext/theme/templates/socialaccount/snippets/provider_list.html
+++ b/readthedocsext/theme/templates/socialaccount/snippets/provider_list.html
@@ -23,7 +23,7 @@
       <a title="{{ provider.name }}"
          class="ui button"
          href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params next=next %}"
-         > <i class="icon {{ provider.name|lower }}"></i>
+         > <i class="fa-brands fa-{{ provider.name|lower }} icon"></i>
          {% blocktrans trimmed with provider_name=provider.name verbiage=verbiage|default:'Connect to' %}
            {{ verbiage }} {{ provider_name }}
          {% endblocktrans %}
